--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,7 +64,7 @@ span{
 
 @media (max-width:1600px)  {
   body {
-       font-size: 90%;
+       font-size: 35px;
        padding: 1%;
  }
 					    
