changed some css

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,13 @@
     {% else %}
     <title>Manish's Personal Website</title>
     {% endif %}
+    <link rel="icon" type="image/x-icon" href="images/profile.jpg">
     <link href="/css/style.css" rel="stylesheet"/>
   </head>
 
   <body>
-    <h1 id="mg"> Manish Gambhirrao </h1>  
+    
+	    <h1 id="mg"> Manish Gambhirrao </h1> 
     <hr>
     <nav>
 	<a href="/">About</a>
