--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,8 @@
 
 body{
        	color:white;
-        font-family: "Inter", sans-serif;;
+        font-family: "Inter", sans-serif;
+	font-size: 18px;
 	background-color:#0d0d0d;
 	margin: auto;
         padding: 20px;
@@ -54,12 +55,6 @@ span{
 }
 
 
-@media (max-width:1000px)  {
-  body {
-       font-size: 16px;
-       padding: 3%;
-  }
-}
 
 @media (max-width:1600px)  {
   body {
