--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,7 +56,7 @@ span{
 
 
 
-@media (max-width:1600px)  {
+@media screen and (min-width:768px)  {
   body {
        font-size: 35px;
        padding: 1%;
