--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@
 body{
        	color:white;
         font-family: "Inter", sans-serif;
-	font-size: 18px;
+	font-size: 16x;
 	background-color:#0d0d0d;
 	margin: auto;
         padding: 20px;
@@ -56,7 +56,7 @@ span{
 
 
 
-@media screen and (min-width:768px)  {
+@media screen and (max-width:768px)  {
   body {
        font-size: 35px;
        padding: 1%;
