--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@
 body{
        	color:white;
         font-family: "Inter", sans-serif;
-	font-size: 16x;
+	font-size: 16px;
 	background-color:#0d0d0d;
 	margin: auto;
         padding: 20px;
