--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,9 +56,9 @@ span{
 
 
 
-@media screen and (max-width:768px)  {
+@media screen and (min-width:480px)  {
   body {
-       font-size: 45px;
+       font-size: 35px;
        padding: 1%;
  }
 					    
