--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,6 +69,8 @@ span{
 
 @media screen and (min-width: 992px){
     body{
-     font-size: 20px
+     font-size: 20px;
+     padding: 3%;
     }
+
  }							
