--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,31 @@
 {% extends "base.html" %} {% block content %}
-<img id="room"src="images/room.jpeg">
-<h1 class="title">Welcome to my corner of Internet</h1>
-<p>hii there myself Manish, i'm a 20 y/o engineering student working around <span>Design & Code </span> with tons of interest which range from building products to Ai, psychology, *nix systems, robotics, space explorer, nanotechnology and indie hacking </p>
+<h1 class="title">Welcome to my corner on Internet</h1>
+<p>
+  hii there myself Manish, i'm a 20 y/o engineering student working around
+  <span>Design & Code </span> with tons of interest which range from building
+  products to Ai, psychology, *nix systems, robotics, space explorer,
+  nanotechnology and indie hacking
+</p>
 
-<p>currently i'm working on - </p>
+<p>currently i'm working on -</p>
 <ul>
-	<li>learning web devlopment</li>
-	<li>exploring ai & linux space</li>
-	<li>tinkering with hardware</li>
+  <li>learning web devlopment</li>
+  <li>exploring ai & linux space</li>
+  <li>tinkering with hardware</li>
 </ul>
 
-<p>in free time i like to hack on personal projects, ricing my linux setup, watching anime and playing games</p>
+<p>
+  in free time i like to hack on personal projects, ricing my linux setup,
+  watching anime and playing games
+</p>
 
-<p> socials -
+<p>
+  socials -
 
-	<a href= "https://twitter.com/Micky__21_">Twitter</a>
-	<a href= "https://github.com/Manish5121">Github</a>
-	<a href= "https://www.linkedin.com/in/manish-gambhirrao-280a96226/">Linkedin</a>
+  <a href="https://twitter.com/Micky__21_">Twitter</a>
+  <a href="https://github.com/Manish5121">Github</a>
+  <a href="https://www.linkedin.com/in/manish-gambhirrao-280a96226/"
+    >Linkedin</a
+  >
 </p>
 {% endblock content %}
